# nerraders-mc-mods-downloader

./: CHANGELOG.md  README.md  pyproject.toml
data/: mods.json
src/mc_mods_downloader/: builder.py  config.py  constants.py  main.py  storage.py
src/mcdl/: builder.py  config.py  constants.py  main.py  storage.py
src/mcdl/utils/: prompt_user_for_directory.py
