[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mc_mods_downloader"
dynamic = ["version"]
description = "A tool to help you download minecraft mods quickly and easily"
readme = "README.md"
# found using vermin package
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.9.4",
    "questionary>=2.1.1",
    "requests>=2.33.0",
    "rich>=14.3.3",
]
authors = [
    { name = "nerrader" }
]
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pyinstaller>=6.19.0",
    "radon>=6.0.1",
    "ruff>=0.15.7",
    "types-requests>=2.32.4.20260107",
    "vermin>=1.8.0",
    "vulture>=2.16",
]

[tool.hatch.version]
path = "src/mc_mods_downloader/__init__.py"

[project.scripts]
mcdl = "mc_mods_downloader.main:main"
